fixed various bugs and added test data generation endpoint
